exercises/part1/manifests/logger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: logs-pvc
      containers:
      - name: log-writer
        image: 514sh/log-writer:1.0.0
        volumeMounts:
        - name: logs
          mountPath: /usr/src/app/logs
      - name: log-output
        image: 514sh/log-output:1.1.0
        volumeMounts:
        - name: logs
          mountPath: /usr/src/app/logs
