exercises/part1/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: logs-pvc
      containers:
        - name: pingpong
          image: 514sh/pingpong:1.1.0
          volumeMounts:
          - name: logs
            mountPath: /usr/src/app/logs
