exercises/part1/manifests/hashgen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
  - port: 1235
    targetPort: 5000
    protocol: TCP
