exercises/part1/manifests/logger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger-svc
spec:
  type: ClusterIP
  selector:
    app: logger
  ports:
  - port: 1237
    targetPort: 5000
    protocol: TCP
